// Copyright 2022 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package keys;

option go_package = "github.com/gravitational/teleport/api/utils/keys";

// AttestationRequest is a request to attest an attestation request.
message AttestationRequest {
  oneof attestation_request {
    // yubikey_attestation_request is a request to attest a specific YubiKey PIV slot.
    YubiKeyAttestationRequest yubikey_attestation_request = 1;
  }
}

// YubiKeyAttestationRequest is a request to attest a specific YubiKey PIV slot.
message YubiKeyAttestationRequest {
  // slot_cert is an attestation certificate generated from a YubiKey PIV
  // slot's public key and signed by the YubiKey's attestation certificate.
  bytes slot_cert = 1;

  // attestation_cert is a YubiKey's unique attestation certificate signed by a Yubico CA.
  bytes attestation_cert = 2;
}
